keepnotes/Kubernetes/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: benhelith/keepcoding06:Keepnotes-app
          name: app
          ports:
          - containerPort: 5000
            name: app
