keepnotes/Kubernetes/deploy-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: mysql
        name: db
        ports:
        - containerPort: 3306
          name: db
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: confidb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
        - name: confidb
          configMap:
            name: confidb
            items:
              - key: keepnotes.sql
                path: keepnotes.sql
            defaultMode: 0777
