keepnotes/Kubernetes/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  ports:
    - name: "app-service"
      port: 5000
      targetPort: 5000
  selector:
    app: app
  type: LoadBalancer
