keepnotes/Kubernetes/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  type: ClusterIP
  ports:
    - name: "db"
      port: 3306
      targetPort: 3306
  selector:
    app: db
  type: LoadBalancer
